--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ a {
     grid-template-rows: 1fr 1fr;
     box-shadow: 0px 5px 0px rgb(197, 193, 193);
     padding-left: 1rem;
-    margin-top: -20px;
 }
 
 .search {
@@ -72,11 +71,23 @@ a {
     justify-content: start;
 }
 
-
-
 .buttons {
     display: grid;
     grid-auto-flow: column;
+    grid-template-columns: 4fr repeat(3, 1fr);
+    place-items: center start;
+}
+
+.logo {
+    font-size: 65px !important;
+    display: inline-grid;
+}
+
+.biglogo {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: auto 1fr;
+    place-items: center start;
 }
 
 .buttons > button {
@@ -86,8 +97,9 @@ a {
     height: 3rem;
     border: none;
     color: white;
-
+    width: 8rem;
 }
+
 
 .content {
     display: grid;
